config/kubernetes/development/deployment_sidekiq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: parliamentary-questions-sidekiq
  name: parliamentary-questions-sidekiq
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: parliamentary-questions-sidekiq
  template:
    metadata:
      labels:
        app: parliamentary-questions-sidekiq
    spec:
      containers:
        - name: parliamentary-questions-rails-jobs
          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/pq-team/parliamentary-questions:development.latest
          command: ["./docker/entrypoint-background-jobs.sh"]
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - 'bundle exec sidekiqmon | grep "parliamentary-questions"'
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 10
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - 'bundle exec sidekiqmon | grep "parliamentary-questions"'
            initialDelaySeconds: 30
            periodSeconds: 90
            timeoutSeconds: 15
            successThreshold: 1
            failureThreshold: 3
