config/kubernetes/development/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: parliamentary-questions
  name: parliamentary-questions-service
  namespace: parliamentary-questions-development
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: parliamentary-questions
