config/kubernetes/development/ingress-live.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pq-development
  namespace: parliamentary-questions-development
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: pq-secrets
    external-dns.alpha.kubernetes.io/set-identifier: pq-development-parliamentary-questions-development-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
      SecDefaultAction "phase:2,pass,log,tag:github_team=central-digital-product-team,tag:namespace=parliamentary-questions-production"
spec:
  ingressClassName: modsec
  rules:
    - host: development.trackparliamentaryquestions.service.gov.uk
      http:
        paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: parliamentary-questions-service
              port:
                number: 3000
  tls:
    - hosts:
        - development.trackparliamentaryquestions.service.gov.uk
      secretName: parliamentary-questions-development-cert
